# PPTVideo_to_image

./: README.md  video2img_moviepy.py  video2img_opencv.py
Cpp_branch/: .gitignore  CMakeLists.txt  CMakePresets.json  PV2i.cpp
Cpp_branch/lib/opencv/: setup_vars_opencv4.cmd
Cpp_branch/lib/opencv/x64/mingw/lib/: OpenCVModules-release.cmake  OpenCVModules.cmake
Cpp_branch/src/: PV2i.cpp
Cpp_branch/test/: test_ORB.cpp
Python_branch/: video2img_moviepy.py  video2img_opencv.py
